--- a/gb/19/7/31/n11420219.md
+++ b/gb/19/7/31/n11420219.md
@@ -1,64 +1,63 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/djerb2399/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/djerb2399/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/djerb2399/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/djerb2399/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/djerb2399/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/djerb2399/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/djerb2399/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/djerb2399/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/djerb2399/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/djerb2399/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/djerb2399/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/djerb2399/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/djerb2399/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/djerb2399/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/djerb2399/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/djerb2399/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/djerb2399/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/djerb2399/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/djerb2399/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/djerb2399/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/djerb2399/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/djerb2399/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/djerb2399/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/djerb2399/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/djerb2399/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/djerb2399/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/djerb2399/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/djerb2399/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/djerb2399/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/djerb2399/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/djerb2399/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/djerb2399/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/djerb2399/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/djerb2399/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/djerb2399/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/djerb2399/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/djerb2399/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/djerb2399/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/djerb2399/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/djerb2399/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/djerb2399/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/djerb2399/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/djerb2399/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/djerb2399/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/djerb2399/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cufnqn370/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>南崁儿童艺术村  让桃园夏日充满亲子趣味</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2019年07月31日讯】（大纪元记者徐乃义台湾<ahref="https://github.com/djerb2399/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD.md#1">桃园</a>报导）由“北区儿童之家员工及院长宿舍”活化再利用的南崁儿童艺术村，自今年儿童节开馆试营运后，历经4个月营运整备，即将于8月4日起正式营运，为让参访的大小朋友收获满满，特别规划了“仲夏之乐－黄昏艺场”、“艺童工作趣”、“夏胖草地野餐市集”、“人文亲子讲堂”等活动，要让桃园夏日充满亲子趣味！</p>
-<figure id="attachment_11420222" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/07/db24e822643ea241f473fdcc756938cc.jpg"><img class="size-medium wp-image-11420222" src="https://i.epochtimes.com/assets/uploads/2019/07/db24e822643ea241f473fdcc756938cc-450x338.jpg" alt="" width="450" b="338" /></a><figcaption class="wp-caption-text">小书店手作市集深受民众喜爱。（<ahref="https://github.com/djerb2399/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD.md#1">桃园</a>文化局提供）</figcaption></figure>
+<p>【大纪元2019年07月31日讯】（大纪元记者徐乃义台湾<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD.md#1">桃园</a>报导）由“北区儿童之家员工及院长宿舍”活化再利用的南崁儿童艺术村，自今年儿童节开馆试营运后，历经4个月营运整备，即将于8月4日起正式营运，为让参访的大小朋友收获满满，特别规划了“仲夏之乐－黄昏艺场”、“艺童工作趣”、“夏胖草地野餐市集”、“人文亲子讲堂”等活动，要让桃园夏日充满亲子趣味！</p>
+<figure id="attachment_11420222" aria-describedby="caption-attachment-11420222" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/07/db24e822643ea241f473fdcc756938cc.jpg"><img class="size-medium wp-image-11420222" src="https://i.epochtimes.com/assets/uploads/2019/07/db24e822643ea241f473fdcc756938cc-450x338.jpg" alt="" width="450" b="338" /></a><figcaption id="caption-attachment-11420222" class="wp-caption-text">小书店手作市集深受民众喜爱。<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD.md#1">桃园</a>文化局提供）</figcaption></figure>
 <p>以“亲子、艺术、学习、美食”为再利用元素的南崁儿童艺术村，占地约3,800平方公尺，前身为民国69年兴建的“北区儿童之家员工及院长宿舍”，正式营运，除了有“艺童工作趣”生活工艺创作坊，带领大小朋友一同感受手作乐趣，更在8月每周六推出“仲夏之乐－黄昏艺场”规划电影欣赏与艺文节目，每周日推出“人文亲子讲堂”邀请教育界、艺文界名师开讲，充实爸妈亲子知识能量。</p>
-<figure id="attachment_11420224" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/07/4168e5d19357d14f4d0077a8465a5c41.jpg"><img class="size-medium wp-image-11420224" src="https://i.epochtimes.com/assets/uploads/2019/07/4168e5d19357d14f4d0077a8465a5c41-450x274.jpg" alt="" width="450" b="274" /></a><figcaption class="wp-caption-text">儿童演艺场举办许多亲子活动及人文讲座。（<ahref="https://github.com/djerb2399/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD%E6%96%87%E5%8C%96%E5%B1%80.md#1">桃园文化局</a>提供）</figcaption></figure>
+<figure id="attachment_11420224" aria-describedby="caption-attachment-11420224" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/07/4168e5d19357d14f4d0077a8465a5c41.jpg"><img class="size-medium wp-image-11420224" src="https://i.epochtimes.com/assets/uploads/2019/07/4168e5d19357d14f4d0077a8465a5c41-450x274.jpg" alt="" width="450" b="274" /></a><figcaption id="caption-attachment-11420224" class="wp-caption-text">儿童演艺场举办许多亲子活动及人文讲座。<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD%E6%96%87%E5%8C%96%E5%B1%80.md#1">桃园文化局</a>提供）</figcaption></figure>
 <p>另外8/3、8/4 举办的“夏胖草地胖卡野餐市集”更有活动专属优惠，只要在胖卡消费，不限金额，即可获得180元的“艺术村现金折价券”；市集当日同时安排“赖宝街头艺术表演”、“千义陀螺”演出，邀请市民朋友们一同徜徉草地，享受夏日时光！</p>
-<p><ahref="https://github.com/djerb2399/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD%E6%96%87%E5%8C%96%E5%B1%80.md#1">桃园文化局</a>长庄秀美表示：<ahref="https://github.com/djerb2399/djy/blob/master/gb/tag/%E6%96%87%E5%8C%96%E8%B5%84%E4%BA%A7.md#1">文化资产</a>再利用是城市展现底蕴和风华的重要契机，在维护文化资产同时如能以创新手法呈现新风貌，才能让城市有更多可能性。目前南崁儿童艺术村除了串联文学、艺术、音乐与美学规划四季儿童主题活动外，希望透过与在地力量如社区、国中小串联，让儿童艺术村除了是历史展示场域外，更是艺术教育的创新基地。◇</p>
+<p><ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD%E6%96%87%E5%8C%96%E5%B1%80.md#1">桃园文化局</a>长庄秀美表示：<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E6%96%87%E5%8C%96%E8%B5%84%E4%BA%A7.md#1">文化资产</a>再利用是城市展现底蕴和风华的重要契机，在维护文化资产同时如能以创新手法呈现新风貌，才能让城市有更多可能性。目前南崁儿童艺术村除了串联文学、艺术、音乐与美学规划四季儿童主题活动外，希望透过与在地力量如社区、国中小串联，让儿童艺术村除了是历史展示场域外，更是艺术教育的创新基地。◇</p>
 <p>责任编辑：宇璇</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/16/8/28/n8244669.md#1">桃园文化局长：神韵音乐指引人类新方向</a></li>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/17/9/20/n9651829.md#1">桃园文化局长：神韵气势磅礴 宛如天籁</a></li>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/17/12/7/n9933779.md#1">“旧城、商圈、文创”? 展现“桃仔园”街口?</a></li>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/18/12/19/n10919386.md#1">桃园掌握工程推动进度  让文化建设顺利完成</a></li>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/19/1/25/n11000954.md#1">“普拉斯” 全台第1个专属地方文化资产导览APP</a></li>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/19/7/11/n11377700.md#1">桃园文化局水漾丰情─九悦画会联展</a></li>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/20/3/21/n11961479.md#1">农委会主委陈吉仲：米粮及蔬菜供应无虞</a></li>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/20/3/21/n11961482.md#1">蓝迪“儿童之家”“入厝” 疫情影响线上直播</a></li>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/20/3/20/n11957786.md#1">桃园市杨梅区公所第六公墓人行步道修建</a></li>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/20/3/20/n11957234.md#1">桃园“亲友安心旅馆” 一天1500元以内</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/8/28/n8244669.md#1">桃园文化局长：神韵音乐指引人类新方向</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/17/9/20/n9651829.md#1">桃园文化局长：神韵气势磅礴 宛如天籁</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/17/12/7/n9933779.md#1">“旧城、商圈、文创”? 展现“桃仔园”街口?</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/12/19/n10919386.md#1">桃园掌握工程推动进度  让文化建设顺利完成</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/19/1/25/n11000954.md#1">“普拉斯” 全台第1个专属地方文化资产导览APP</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/19/7/11/n11377700.md#1">桃园文化局水漾丰情─九悦画会联展</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/2/n13690505.md#1">2022桃园彩色海芋季 相“芋”花海开幕</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13688214.md#1">扩大确诊学校周边里环境消毒 桃园环保局防堵</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13688328.md#1">长庚大学与合一生技 加速新药开发与人才培育</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13688212.md#1">桃环局重罚美福仓储 限412前清除废弃物</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/9/n10131106.md#1" target="_blank">林辉：北京四中老师们健忘背后的残酷真相</a></li><li><a href="https://github.com/djerb2399/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/4/26/n2095376.md#1" target="_blank">法轮功中南海事件真相揭秘</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/25/n10247979.md#1" target="_blank">中共淫乱的前生今世（6）淫乱大看台</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/5/13/n7891043.md#1" target="_blank">永恒的感恩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/20/3/20/n11956105.md#1">【世界十字路口】疫情四大责任 中共难逃</a></li>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/20/3/20/n11959741.md#1">广东佛山三水警察上门 强制隔离有健康证者</a></li>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/20/3/20/n11959604.md#1">【现场视频】为复工排队办证 人挤人藏隐忧</a></li>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/20/3/19/n11953667.md#1">大陆网络流传的一份死亡名单 引关注</a></li>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/20/3/19/n11955384.md#1">北京昆明湖罕见涨潮 传上次涨潮后毛泽东去世</a></li>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/20/3/19/n11953195.md#1">16岁学生致信武汉作家方方 引起轩然大波</a></li>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/20/3/18/n11950901.md#1">杜汶泽用口罩换米 与何韵诗幽默互动笑翻网友</a></li>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/20/3/18/n11950740.md#1">周杰伦全家澳洲度假 返台须居家隔离14天</a></li>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/18/7/5/n10538877.md#1">睡前一碗安眠汤睡得沉 五款茶饮安抚情绪</a></li>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/18/1/20/n10073708.md#1">芋头是“天然养颜食物” 还能抗癌解毒</a></li>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/20/3/18/n11950927.md#1">中共肺炎病人气管插管 到底有多大作用？</a></li>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/20/3/20/n11959207.md#1">【胡乃文开讲】喝1碗汤退烧杀病毒 医：发烧代表你身体好</a></li>
-<li><a href="https://github.com/djerb2399/djy/blob/master/gb/20/3/19/n11953519.md#1">【抗疫家务通】延长食物的保存期限-水果篇</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/2/n13690909.md#1">【马克时空】上百俄机被乌击落 战机如何发现导弹来袭?</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13685151.md#1">玄彬与孙艺真本日于首尔结婚 婚礼照笑容灿烂</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/djerb2399/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/djerb2399/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/7/31/n11420219.htm">南崁儿童艺术村  让桃园夏日充满亲子趣味</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/7/31/n11420219.htm">南崁儿童艺术村  让桃园夏日充满亲子趣味</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/djerb2399/djy/blob/master/gb/19/7/31/n11420219.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/djerb2399/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djerb2399/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/djerb2399/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/djerb2399/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/djerb2399/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djerb2399/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/djerb2399/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djerb2399/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/djerb2399/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djerb2399/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/djerb2399/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djerb2399/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/djerb2399/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djerb2399/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/djerb2399/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djerb2399/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/djerb2399/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djerb2399/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/djerb2399/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djerb2399/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/djerb2399/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djerb2399/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/djerb2399/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djerb2399/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/djerb2399/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djerb2399/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/djerb2399/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djerb2399/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/djerb2399/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djerb2399/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/djerb2399/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djerb2399/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/djerb2399/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djerb2399/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/djerb2399/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djerb2399/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/djerb2399/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djerb2399/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/djerb2399/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djerb2399/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/djerb2399/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djerb2399/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/djerb2399/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djerb2399/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/djerb2399/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djerb2399/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/djerb2399/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djerb2399/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cufnqn370/djy/blob/master/gb/19/7/31/n11420219.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
